@@ -1,0 +1,2 @@
+<?php
+debug_print_backtrace();
